AC_INIT(src/term.c)

AC_PREREQ(2.52)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(DFBTerm, 0.8.15)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC

AC_CHECK_HEADERS(stdbool.h)

dnl Clear default CFLAGS
if test x"$CFLAGS" = x"-g -O2"; then
  CFLAGS=
fi
  
CFLAGS="-O3 -pipe $CFLAGS"

if test "x$GCC" = xyes; then
  CFLAGS="-Wall $CFLAGS"
fi


AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],, enable_debug=no)
if eval "test x$enable_debug = xyes"; then
  CFLAGS="$CFLAGS -g3"
fi



AC_CHECK_HEADERS(stdbool.h)

AC_CHECK_HEADERS(sys/select.h sys/time.h sys/un.h paths.h sys/syslimits.h sys/fsuid.h)


############################
# gnome-pty-support checks #
############################
   
AC_MSG_CHECKING([for Unix98 sendmsg])
AC_TRY_LINK([
#include <stdio.h>
#include <sys/types.h>
#include <sys/socket.h>
],[
struct msghdr hdr;
hdr.msg_control = NULL;
hdr.msg_controllen = 0;
sendmsg (0, &hdr, 0);  
],[
AC_DEFINE(HAVE_SENDMSG, 1, [Define to 1 if Unix98 sendmsg is available.])
AC_MSG_RESULT(yes)],[AC_MSG_RESULT(no)])

AC_CHECK_UTMP

AC_CHECK_HEADERS(pty.h util.h libutil.h ttyent.h)

AC_CHECK_LIB(util, openpty,
    [
    AC_CHECK_LIB(util, login_tty, [AC_DEFINE(HAVE_LOGIN_TTY, 1,
                                             [Define to 1 if login_tty is available.])])
    AC_DEFINE(HAVE_OPENPTY, 1, [Define to 1 if openpty support is available])
    AC_DEFINE(HAVE_LIBUTIL, 1, [Define to 1 if libutil is available])
    UTIL_LIBS="-lutil"
    AC_SUBST(UTIL_LIBS)
    ])

AC_CHECK_FUNCS(grantpt utmpxname utmpname getutmpx getutent getttyent)
AC_CHECK_FUNCS(updwtmpx updwtmp fcntl flock strrchr seteuid)

AC_CHECK_HEADERS(stropts.h)

dnl And workaround for a Autoconf 2.4 bug:
if test x$ac_cv_func_grantpt = xyes; then 
    :
else 
    AC_CHECK_LIB(pt, grantpt)
fi


#
# Check for DirectFB
#
PKG_CHECK_MODULES(DIRECTFB, directfb >= 0.9.14)

#
# Check for LiTE
#
PKG_CHECK_MODULES(LITE, lite >= 0.4.2)

CFLAGS="$CFLAGS -Werror-implicit-function-declaration"

AC_OUTPUT([
Makefile
src/Makefile
])
