## Makefile.am for DirectFB-examples/data

SUBDIRS = df_neo spacedream

examplesdatadir = @DATADIR@

examplesdata_DATA = \
	biglogo.png		\
	card.png		\
	colorkeyed.gif		\
	cursor.png              \
	cursor_red.png          \
	desktop.png		\
	tux.png			\
	tux_alpha.png		\
	destination_mask.png	\
	melted_rgb16.dfiff	\
	melted_rgb32.dfiff	\
	melted.gif		\
	melted.jpg		\
	melted.png		\
	pngtest.png		\
	pngtest2.png		\
	meter.png		\
	intro.png		\
	shot.png		\
	testmask.png		\
	grid.gif                \
	dfblogo.png		\
	convergence.png		\
	wood_andi.jpg		\
	smokey_light.jpg	\
	gnome-mouse.png		\
	joystick.png		\
	texture.png		\
	fish.png		\
	swirl.png		\
	rose.png

fontsdatadir = @DATADIR@/fonts

fontsdata_DATA = \
	decker.dgiff	\
	decker.ttf

EXTRA_DIST =  $(examplesdata_DATA) $(fontsdata_DATA) pngtest3.png
